--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,24 +1,17 @@
-<form #form="ngForm" (ngSubmit)="onSubmit(form)">
+<form>
   <h2>Login</h2>
 
   <div class="control-row">
     <div class="control no-margin">
       <label for="email">Email</label>
-      <input id="email" type="email" name="email" ngModel requiered email #email="ngModel"/>
+      <input id="email" type="email" />
     </div>
 
     <div class="control no-margin">
       <label for="password">Password</label>
-      <input id="password" type="password" name="password" ngModel required minlength="6" #password="ngModel"/>
+      <input id="password" type="password" />
     </div>
 
     <button class="button">Login</button>
   </div>
-
-  @if(email.touched && email.dirty && email.invalid){
-    <p class="control-error">correo invalido, ingrese un correo existente</p> 
-  }
-  @if(password.touched && password.dirty && password.invalid){
-    <p class="control-error">contraseña invalida, debe tener al menos 6 caracteres</p> 
-  }
 </form>
