--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <fieldset>
+  <fieldset formArrayName="source">
     <legend>How did you find us?</legend>
     <div class="control">
       <input
@@ -106,6 +106,7 @@
         id="google"
         name="acquisition"
         value="google"
+        formControlName="0"
       />
       <label for="google">Google</label>
     </div>
@@ -116,6 +117,7 @@
         id="friend"
         name="acquisition"
         value="friend"
+        formControlName="1"
       />
       <label for="friend">Referred by friend</label>
     </div>
@@ -126,6 +128,7 @@
         id="other"
         name="acquisition"
         value="other"
+        formControlName="2"
       />
       <label for="other">Other</label>
     </div>
@@ -144,6 +147,10 @@
       </label>
     </div>
   </div>
+  
+  @if(form.invalid && form.touched){
+    <p class="control-error">Please fill out all required fields.</p>
+  }
 
   <p class="form-actions">
     <button type="button" class="button button-flat" (click)="onReset()">Reset</button>
